--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kinkinetics | Personalized AI SaaS</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KinKinetics - Empowering Precision Under Pressure</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Kinkinetics</h1>
-            <nav>
-                <a href="#hero">Home</a>
-                <a href="#features">Features</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </div>
-    </header>
+  <!-- Navigation Bar -->
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#solutions">Solutions</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="hero">
-        <div class="container">
-            <h2>Personalized AI Companion</h2>
-            <p>Empowering human connections with emotionally intelligent AI. Explore the future with Kinkinetics.</p>
-            <a href="#contact" class="cta">Get in Touch</a>
-        </div>
-    </section>
+  <!-- Home Section -->
+  <section id="home" class="section">
+    <h1>Empowering Precision Under Pressure</h1>
+    <p>Revolutionizing Time-Critical Decision-Making.</p>
+    <div class="buttons">
+      <a href="#about" class="btn">Learn More</a>
+      <a href="#solutions" class="btn">See Our Solutions</a>
+      <a href="#contact" class="btn">Contact Us</a>
+    </div>
+  </section>
 
-    <section id="features">
-        <div class="container">
-            <h3>Features</h3>
-            <ul>
-                <li>Customizable AI Models</li>
-                <li>Real-time Emotional Intelligence</li>
-                <li>Subscription-Based SaaS Model</li>
-            </ul>
-        </div>
-    </section>
+  <!-- About Section -->
+  <section id="about" class="section">
+    <h2>About Us</h2>
+    <p>Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations...</p>
+  </section>
 
-    <section id="pricing">
-        <div class="container">
-            <h3>Pricing</h3>
-            <p>Coming soon! Stay tuned for updates.</p>
-        </div>
-    </section>
+  <!-- Portfolio Section -->
+  <section id="portfolio" class="section">
+    <h2>Our Portfolio</h2>
+    <p>Road Safety MVP: Our initial Minimum Viable Product (MVP) demonstrated remarkable success...</p>
+  </section>
 
-    <section id="contact">
-        <div class="container">
-            <h3>Contact Us</h3>
-            <p>Email: <a href="mailto:info@kinkinetics.co.in">info@kinkinetics.co.in</a></p>
-            <p>Follow us on <a href="#">LinkedIn</a>.</p>
-        </div>
-    </section>
+  <!-- Solutions Section -->
+  <section id="solutions" class="section">
+    <h2>Solutions We Provide</h2>
+    <ul>
+      <li>Automotive Safety</li>
+      <li>Aerospace Innovation</li>
+      <li>Emergency Services</li>
+      <li>Defense & Security</li>
+      <li>Healthcare</li>
+    </ul>
+  </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Kinkinetics. All rights reserved.</p>
-        </div>
-    </footer>
+  <!-- Team Section -->
+  <section id="team" class="section">
+    <h2>Meet the Team</h2>
+    <p>[Your Name] – Founder & Algorithm Architect...</p>
+  </section>
 
-    <script src="script.js"></script>
+  <!-- Contact Section -->
+  <section id="contact" class="section">
+    <h2>Get in Touch</h2>
+    <p>Email: [Insert email address]</p>
+    <p>Phone: [Insert phone number]</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 KinKinetics. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
-
