--- a/index.html
+++ b/index.html
@@ -1,78 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KinKinetics - Empowering Precision Under Pressure</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="KinKinetics - Empowering Time-Critical Decision-Making">
+    <title>KinKinetics - Precision Decision Support</title>
+    
+    <!-- Link to Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- Link to External CSS File -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <header class="navbar">
+
+    <!-- Navigation -->
     <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#solutions">Solutions</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#solutions">Solutions</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
-  </header>
 
-  <!-- Home Section -->
-  <section id="home" class="section">
-    <h1>Empowering Precision Under Pressure</h1>
-    <p>Revolutionizing Time-Critical Decision-Making.</p>
-    <div class="buttons">
-      <a href="#about" class="btn">Learn More</a>
-      <a href="#solutions" class="btn">See Our Solutions</a>
-      <a href="#contact" class="btn">Contact Us</a>
-    </div>
-  </section>
+    <!-- Home Section -->
+    <section id="home" class="home-section">
+        <h1>Empowering Precision Under Pressure: Revolutionizing Time-Critical Decision-Making.</h1>
+        <p>From life-saving moments to mission-critical operations, our decision support system ensures accuracy and reliability when time is of the essence.</p>
+        <div>
+            <button onclick="location.href='#about'">Learn More</button>
+            <button onclick="location.href='#solutions'">See Our Solutions</button>
+            <button onclick="location.href='#contact'">Contact Us</button>
+        </div>
+    </section>
 
-  <!-- About Section -->
-  <section id="about" class="section">
-    <h2>About Us</h2>
-    <p>Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations...</p>
-  </section>
+    <!-- About Section -->
+    <section id="about" class="about-section">
+        <h2>About Us</h2>
+        <p>Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations. At KinKinetics...</p>
+        <p>At KinKinetics, we’re not just solving problems; we’re saving moments that matter most.</p>
+    </section>
 
-  <!-- Portfolio Section -->
-  <section id="portfolio" class="section">
-    <h2>Our Portfolio</h2>
-    <p>Road Safety MVP: Our initial Minimum Viable Product (MVP) demonstrated remarkable success...</p>
-  </section>
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio-section">
+        <h2>Our Portfolio</h2>
+        <h3>Road Safety MVP</h3>
+        <p>Our initial Minimum Viable Product (MVP) demonstrated remarkable success...</p>
+        <h3>Vision for the Future</h3>
+        <p>Building on our MVP’s success, we are expanding applications to critical domains...</p>
+    </section>
 
-  <!-- Solutions Section -->
-  <section id="solutions" class="section">
-    <h2>Solutions We Provide</h2>
-    <ul>
-      <li>Automotive Safety</li>
-      <li>Aerospace Innovation</li>
-      <li>Emergency Services</li>
-      <li>Defense & Security</li>
-      <li>Healthcare</li>
-    </ul>
-  </section>
+    <!-- Solutions Section -->
+    <section id="solutions" class="solutions-section">
+        <h2>Solutions We Provide</h2>
+        <ul>
+            <li>Automotive Safety: Predicting and avoiding collisions...</li>
+            <li>Aerospace Innovation: Supporting space missions...</li>
+            <li>Healthcare: Assisting surgeons with split-second decisions...</li>
+        </ul>
+    </section>
 
-  <!-- Team Section -->
-  <section id="team" class="section">
-    <h2>Meet the Team</h2>
-    <p>[Your Name] – Founder & Algorithm Architect...</p>
-  </section>
+    <!-- Team Section -->
+    <section id="team" class="team-section">
+        <h2>Meet the Team</h2>
+        <p>[Your Name] – Founder & Algorithm Architect</p>
+        <h3>Join Us:</h3>
+        <p>We’re always looking for like-minded individuals...</p>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section">
-    <h2>Get in Touch</h2>
-    <p>Email: [Insert email address]</p>
-    <p>Phone: [Insert phone number]</p>
-  </section>
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <h2>Get in Touch</h2>
+        <ul>
+            <li>Email: <a href="mailto:youremail@kinkinetics.in">youremail@kinkinetics.in</a></li>
+            <li>Phone: +91 1234567890</li>
+        </ul>
+    </section>
 
-  <footer>
-    <p>&copy; 2024 KinKinetics. All rights reserved.</p>
-  </footer>
+    <!-- Link to External JS File -->
+    <script src="js/script.js"></script>
 
-  <script src="script.js"></script>
 </body>
 </html>
