--- a/index.html
+++ b/index.html
@@ -26,59 +26,13 @@
         </ul>
     </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="home-section">
-        <h1>Empowering Precision Under Pressure: Revolutionizing Time-Critical Decision-Making.</h1>
-        <p>From life-saving moments to mission-critical operations, our decision support system ensures accuracy and reliability when time is of the essence.</p>
-        <div>
-            <button onclick="location.href='#about'">Learn More</button>
-            <button onclick="location.href='#solutions'">See Our Solutions</button>
-            <button onclick="location.href='#contact'">Contact Us</button>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about-section">
-        <h2>About Us</h2>
-        <p>Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations. At KinKinetics...</p>
-        <p>At KinKinetics, we’re not just solving problems; we’re saving moments that matter most.</p>
-    </section>
-
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio-section">
-        <h2>Our Portfolio</h2>
-        <h3>Road Safety MVP</h3>
-        <p>Our initial Minimum Viable Product (MVP) demonstrated remarkable success...</p>
-        <h3>Vision for the Future</h3>
-        <p>Building on our MVP’s success, we are expanding applications to critical domains...</p>
-    </section>
-
-    <!-- Solutions Section -->
-    <section id="solutions" class="solutions-section">
-        <h2>Solutions We Provide</h2>
-        <ul>
-            <li>Automotive Safety: Predicting and avoiding collisions...</li>
-            <li>Aerospace Innovation: Supporting space missions...</li>
-            <li>Healthcare: Assisting surgeons with split-second decisions...</li>
-        </ul>
-    </section>
-
-    <!-- Team Section -->
-    <section id="team" class="team-section">
-        <h2>Meet the Team</h2>
-        <p>[Your Name] – Founder & Algorithm Architect</p>
-        <h3>Join Us:</h3>
-        <p>We’re always looking for like-minded individuals...</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
-        <h2>Get in Touch</h2>
-        <ul>
-            <li>Email: <a href="mailto:youremail@kinkinetics.in">youremail@kinkinetics.in</a></li>
-            <li>Phone: +91 1234567890</li>
-        </ul>
-    </section>
+    <!-- Placeholder for content sections -->
+    <div id="home"></div>
+    <div id="about"></div>
+    <div id="portfolio"></div>
+    <div id="solutions"></div>
+    <div id="team"></div>
+    <div id="contact"></div>
 
     <!-- Link to External JS File -->
     <script src="js/script.js"></script>
