updated all files

--- a/content/portfolio.html
+++ b/content/portfolio.html
@@ -1,7 +1,21 @@
 <section id="portfolio" class="portfolio-section">
     <h2>Our Portfolio</h2>
+
     <h3>Road Safety MVP</h3>
-    <p>Our initial Minimum Viable Product (MVP) demonstrated remarkable success...</p>
+    <p>Our initial Minimum Viable Product (MVP) demonstrated remarkable success in optimizing decision-making during a high-stakes road scenario. By analyzing two lanes and multiple obstacles under time pressure, our system achieved an impressive 96% accuracy rate in guiding vehicles to safety.</p>
+
     <h3>Vision for the Future</h3>
-    <p>Building on our MVP’s success, we are expanding applications to critical domains...</p>
+    <p>Building on our MVP’s success, we are expanding applications to critical domains, including:</p>
+    <ul>
+        <li><strong>Emergency Response</strong>: Assisting firefighters with critical timing in hazardous conditions.</li>
+        <li><strong>Aerospace Operations</strong>: Supporting parachute deployment and docking operations in space exploration.</li>
+        <li><strong>Healthcare</strong>: Enabling faster, more reliable decisions in emergency medical procedures.</li>
+    </ul>
+
+    <h3>Achievements</h3>
+    <ul>
+        <li>MVP with 96% accuracy</li>
+        <li>Featured in [relevant conference or publication if applicable]</li>
+        <li>Partnerships with [potential partners or collaborators]</li>
+    </ul>
 </section>
