--- a/content/team.html
+++ b/content/team.html
@@ -1,6 +1,12 @@
 <section id="team" class="team-section">
     <h2>Meet the Team</h2>
-    <p>[Your Name] – Founder & Algorithm Architect</p>
-    <h3>Join Us:</h3>
-    <p>We’re always looking for like-minded individuals...</p>
+
+    <h3>[Your Name] – Founder & Algorithm Architect</h3>
+    <p>As a visionary with a passion for technology and innovation, I developed the foundation for KinKinetics. With a background in [your relevant experience], my focus is on building solutions that make a difference in critical moments.</p>
+
+    <h3>Advisors and Collaborators</h3>
+    <p>[List any mentors, advisors, or partners here, even informally if applicable.]</p>
+
+    <h3>Join Us</h3>
+    <p>We’re always looking for like-minded individuals passionate about redefining decision-making under pressure. Reach out if you’d like to collaborate.</p>
 </section>
