--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="KinKinetics - Empowering Time-Critical Decision-Making">
-    <title>KinKinetics - Precision Decision Support</title>
-    
-    <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
-    <!-- Link to External CSS File -->
-    <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>KinKinetics</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <!-- Navigation -->
@@ -22,20 +20,92 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#solutions">Solutions</a></li>
             <li><a href="#team">Team</a></li>
+            <li><a href="#updates">Updates</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
-    <!-- Placeholder for content sections -->
-    <div id="home"></div>
-    <div id="about"></div>
-    <div id="portfolio"></div>
-    <div id="solutions"></div>
-    <div id="team"></div>
-    <div id="contact"></div>
+    <!-- Home Section -->
+    <section id="home" class="home-section">
+        <h1>Empowering Precision Under Pressure</h1>
+        <h2>Revolutionizing Time-Critical Decision-Making</h2>
+        <p>From life-saving moments to mission-critical operations, our decision support system ensures accuracy and reliability when time is of the essence.</p>
+        <button onclick="window.location.href='#about'">Learn More</button>
+    </section>
 
-    <!-- Link to External JS File -->
-    <script src="js/script.js"></script>
+    <!-- About Section -->
+    <section id="about" class="about-section">
+        <h2>About Us</h2>
+        <p>At KinKinetics, we are on a mission to redefine decision-making under pressure. Our innovative decision support system leverages advanced algorithms to provide actionable insights in critical moments. Our journey began with a road safety MVP, and now we are expanding to diverse high-stakes domains.</p>
+    </section>
 
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio-section">
+        <h2>Our Portfolio</h2>
+        <div class="portfolio-item">
+            <h3>Road Safety MVP</h3>
+            <p>Our MVP achieved 96% accuracy in optimizing decision-making during high-stakes road scenarios, guiding vehicles to safety under time pressure.</p>
+        </div>
+        <div class="portfolio-item">
+            <h3>Vision for the Future</h3>
+            <ul>
+                <li>Emergency Response</li>
+                <li>Aerospace Operations</li>
+                <li>Healthcare</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Solutions Section -->
+    <section id="solutions" class="solutions-section">
+        <h2>Solutions We Provide</h2>
+        <ul>
+            <li>Automotive Safety</li>
+            <li>Aerospace Innovation</li>
+            <li>Emergency Services</li>
+            <li>Defense & Security</li>
+            <li>Healthcare</li>
+        </ul>
+    </section>
+
+    <!-- Team Section -->
+    <section id="team" class="team-section">
+        <h2>Meet the Team</h2>
+        <h3>[Your Name] – Founder & Algorithm Architect</h3>
+        <p>As a visionary with a passion for technology, I developed the foundation for KinKinetics. With a background in [your relevant experience], my focus is on building solutions that make a difference in critical moments.</p>
+
+        <h3>Advisors and Collaborators</h3>
+        <p>[List any mentors, advisors, or partners here]</p>
+
+        <h3>Join Us</h3>
+        <p>We’re looking for like-minded individuals passionate about redefining decision-making under pressure.</p>
+    </section>
+
+    <!-- Updates Section -->
+    <section id="updates" class="updates-section">
+        <h2>Updates & Insights</h2>
+        <p>Stay updated on our journey, technological advancements, and insights into time-critical decision-making.</p>
+
+        <div class="update-item">
+            <h3>Upcoming Blog Post: "Revolutionizing Decision-Making Under Pressure"</h3>
+            <p>We'll soon be sharing our thoughts on the future of decision support systems and how AI can be pivotal in life-saving scenarios.</p>
+        </div>
+
+        <div class="update-item">
+            <h3>New Partnership Announcement</h3>
+            <p>We are excited to announce a new partnership with a leading aerospace firm to advance our algorithm for space mission-critical applications.</p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <h2>Contact Us</h2>
+        <p>Have questions or ideas? Get in touch!</p>
+        <p>Email: info@kinkinetics.co.in</p>
+        <p>Phone: +91 123 456 7890</p>
+    </section>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
