--- a/content/about.html
+++ b/content/about.html
@@ -1,5 +1,15 @@
-<section id="about" class="about-section">
+<div class="about-section">
     <h2>About Us</h2>
-    <p>Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations. At KinKinetics...</p>
-    <p>At KinKinetics, we’re not just solving problems; we’re saving moments that matter most.</p>
-</section>
+    <p>
+      Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations. At KinKinetics, we are on a mission to redefine decision-making under pressure. Our innovative decision support system leverages advanced algorithms to analyze dynamic environments in real-time, providing accurate, actionable insights to guide critical actions.
+    </p>
+  
+    <p>
+      Our journey began with an MVP focused on a road scenario—determining the optimal way to avoid obstacles in time-pressured situations. With an impressive 96% accuracy rate, this was just the beginning. From controlling car safety systems to parachute deployments, firefighting operations, and even space exploration, our goal is to apply this technology across diverse, high-pressure domains.
+    </p>
+  
+    <p>
+      At KinKinetics, we’re not just solving problems; we’re saving moments that matter most.
+    </p>
+  </div>
+  
