--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KinKinetics</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +33,7 @@
     <div id="updates"></div>
     <div id="contact"></div>
 
-    <script src="script.js"></script>
+    <script src="js/scripts.js"></scripts>
 </body>
 
 </html>
