updated all files

--- a/content/home.html
+++ b/content/home.html
@@ -1,9 +1,10 @@
-<section id="home" class="home-section">
-    <h1>Empowering Precision Under Pressure: Revolutionizing Time-Critical Decision-Making.</h1>
+<!-- content/home.html -->
+<section class="home-section">
+    <h1>Empowering Precision Under Pressure</h1>
+    <h2>Revolutionizing Time-Critical Decision-Making</h2>
     <p>From life-saving moments to mission-critical operations, our decision support system ensures accuracy and reliability when time is of the essence.</p>
-    <div>
-        <button onclick="location.href='#about'">Learn More</button>
-        <button onclick="location.href='#solutions'">See Our Solutions</button>
-        <button onclick="location.href='#contact'">Contact Us</button>
-    </div>
-</section>
+    <button onclick="window.location.href='#about'">Learn More</button>
+    <button onclick="window.location.href='#solutions'">See Our Solutions</button>
+    <button onclick="window.location.href='#contact'">Contact Us</button>
+  </section>
+  
