updated all files

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KinKinetics</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css"> <!-- Corrected CSS link -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
     <!-- Navigation -->
     <nav>
         <ul>
@@ -34,7 +33,7 @@
     <div id="updates"></div>
     <div id="contact"></div>
 
-    <script src="js/scripts.js"></script> <!-- Corrected JS link -->
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
