--- a/content/portfolio.html
+++ b/content/portfolio.html
@@ -2,8 +2,12 @@
     <h2>Our Portfolio</h2>
 
     <h3>Road Safety MVP</h3>
-    <p>Our initial Minimum Viable Product (MVP) demonstrated remarkable success in optimizing decision-making during a high-stakes road scenario. </p>
-    <p>By analyzing two lanes and multiple obstacles under time pressure, our system achieved an impressive 96% accuracy rate in guiding vehicles to safety.</p>
+    <p>
+        Our initial Minimum Viable Product (MVP) demonstrated remarkable success in optimizing decision-making during a high-stakes road scenario. 
+    </p>
+    <p>
+        By analyzing two lanes and multiple obstacles under time pressure, our system achieved an impressive 96% accuracy rate in guiding vehicles to safety.
+    </p>
 
     <h3>Vision for the Future</h3>
     <p>Building on our MVP’s success, we are expanding applications to critical domains, including:</p>
