--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
         </ul>
     </nav>
 
-    <!-- Dynamic Content Loading -->
-    <div id="home"></div>
-    <div id="about"></div>
-    <div id="portfolio"></div>
-    <div id="solutions"></div>
-    <div id="team"></div>
-    <div id="updates"></div>
-    <div id="contact"></div>
+    <!-- Sections -->
+    <section id="home" class="home-section">
+        <h1>Welcome to KinKinetics</h1>
+        <h2>Revolutionizing Decision Making Under Pressure</h2>
+        <img src="assets/images/homepage.png" alt="Homepage Image">
+        <!-- Additional content -->
+    </section>
+
+    <section id="about" class="about-section"></section>
+    <section id="portfolio" class="portfolio-section"></section>
+    <section id="solutions" class="solutions-section"></section>
+    <section id="team" class="team-section"></section>
+    <section id="updates" class="updates-section"></section>
+    <section id="contact" class="contact-section"></section>
 
     <script src="js/scripts.js"></script>
 </body>
