Updated about.html content with improved descriptions

--- a/content/about.html
+++ b/content/about.html
@@ -1,11 +1,11 @@
 <div class="about-section">
     <h2>About Us</h2>
     <p>
-      Time is a critical factor in life-or-death scenarios, high-stakes missions, and emergency situations. At KinKinetics, we are on a mission to redefine decision-making under pressure. Our innovative decision support system leverages advanced algorithms to analyze dynamic environments in real-time, providing accurate, actionable insights to guide critical actions.
+      At KinKinetics, we specialize in delivering advanced decision support systems tailored for high-stakes environments. Our innovative technology harnesses cutting-edge algorithms and real-time data processing to provide precise, actionable insights, enabling confident decision-making in critical moments
     </p>
   
     <p>
-      Our journey began with an MVP focused on a road scenario—determining the optimal way to avoid obstacles in time-pressured situations. With an impressive 96% accuracy rate, this was just the beginning. From controlling car safety systems to parachute deployments, firefighting operations, and even space exploration, our goal is to apply this technology across diverse, high-pressure domains.
+      Designed for industries where every second matters—such as emergency response, aerospace, automotive safety, and mission-critical operations—our solutions adapt seamlessly to complex, high-pressure scenarios.
     </p>
   
     <p>
