--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
         </ul>
     </nav>
 
-    <!-- Sections -->
     <section id="home" class="home-section">
-        <h1>Welcome to KinKinetics</h1>
-        <h2>Revolutionizing Decision Making Under Pressure</h2>
-        <img src="assets/images/homepage.png" alt="Homepage Image">
-        <!-- Additional content -->
+        <img src="assets/images/homepage.png" alt="Homepage Image" class="background-image">
+        <div class="home-content">
+            <h1>Welcome to KinKinetics</h1>
+            <h2>Revolutionizing Decision Making Under Pressure</h2>
+        </div>
     </section>
+    
 
     <section id="about" class="about-section"></section>
     <section id="portfolio" class="portfolio-section"></section>
