adjusted homepage  image size in style css

--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@
         </ul>
     </nav>
 
-    <section id="home" class="home-section">
-        <img src="assets/images/homepage.png" alt="Homepage Image" class="background-image">
-        <div class="home-content">
-            <h1>Welcome to KinKinetics</h1>
-            <h2>Revolutionizing Decision Making Under Pressure</h2>
-        </div>
-    </section>
+    <section id="home" class="home-section">    </section>
     
 
     <section id="about" class="about-section"></section>
