--- a/index.html
+++ b/index.html
@@ -36,5 +36,13 @@
 
     <script src="js/scripts.js"></script>
 </body>
+<footer style="text-align: center; margin-top: 40px; padding: 20px; background-color: #2E4053; color: white;">
+    <p>© 2024 KinKinetics. All Rights Reserved.</p>
+    <p>
+        <a href="content/privacy-policy.html" style="color: white; text-decoration: none; margin-right: 15px;">Privacy Policy</a>|
+        <a href="content/terms-and-conditions.html" style="color: white; text-decoration: none; margin-left: 15px;">Terms and Conditions</a>
+    </p>
+</footer>
+
 
 </html>
