--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <li><a href="#solutions">Solutions</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#updates">Updates</a></li>
-            <li><a href="#contact">Contact</a></li>
+           <!-- <li><a href="#contact">Contact</a></li> -->
+            <li><a href="content/contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
