--- a/content/contact.html
+++ b/content/contact.html
@@ -7,6 +7,7 @@
 </section>
 -->
 <!-- contact.html -->
+<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,20 +15,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="../css/style.css">
+    <style>
+        /* Add custom CSS for larger spacing and better form design */
+        #contact {
+            padding: 80px 0; /* Add padding to create space around the section */
+            background-color: #f9f9f9; /* Light background color for contrast */
+        }
+
+        .container {
+            max-width: 1200px; /* Increase max width of the container */
+            margin: 0 auto;
+        }
+
+        .section-heading {
+            font-size: 2.5em;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        hr.primary {
+            border-color: #2e4053;
+            width: 60px;
+            margin: 0 auto;
+        }
+
+        p {
+            font-size: 1.2em;
+            color: #555;
+            margin-bottom: 30px;
+        }
+
+        .form-group {
+            margin-bottom: 25px; /* Add space between each input field */
+        }
+
+        .form-control {
+            width: 100%;
+            padding: 15px;
+            font-size: 1.1em;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            margin-bottom: 10px;
+        }
+
+        .form-control:focus {
+            border-color: #2e4053; /* Focus border color */
+            outline: none;
+        }
+
+        .btn {
+            background-color: #2e4053;
+            color: white;
+            font-size: 1.2em;
+            padding: 15px 30px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #1a2a3d; /* Darker shade on hover */
+        }
+
+        .col-lg-8 {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        /* Center content inside the contact section */
+        .text-center {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 
 <section id="contact">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="col-lg-8 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
                 <p>Send us a message and we will get back to you as soon as possible!</p>
             </div>
+        </div>
 
-            <!-- Form Section -->
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+        <!-- Form Section -->
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2">
                 <form action="https://formspree.io/f/xrbggvea" method="POST">
                     <div class="form-group">
                         <label for="name">Your Name:</label>
@@ -41,10 +117,10 @@
                     
                     <div class="form-group">
                         <label for="message">Your Message:</label>
-                        <textarea id="message" name="message" placeholder="Your Message" class="form-control" rows="4" required></textarea>
+                        <textarea id="message" name="message" placeholder="Your Message" class="form-control" rows="6" required></textarea>
                     </div>
                     
-                    <button type="submit" class="btn btn-default btn-xl wow tada">Send Message</button>
+                    <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>
         </div>
