--- a/content/contact.html
+++ b/content/contact.html
@@ -1,13 +1,3 @@
-<!--<section id="contact" class="contact-section">
-    <h2>Get in Touch</h2>
-    <ul>
-        <li>Email: <a href="mailto:info@kinkinetics.in">info@kinkinetics.in</a></li>
-        <li>Phone: +91 7510502582</li>
-    </ul>
-</section>
--->
-<!-- contact.html -->
-<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,6 +77,26 @@
         .text-center {
             text-align: center;
         }
+
+        /* Social Icons Section */
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 15px;
+        }
+
+        .social-icons img {
+            width: 50px;
+            height: 50px;
+        }
+
+        /* Styling for the call-to-action text */
+        .call-to-action h2 {
+            font-size: 1.5em;
+            color: #fff;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -96,9 +106,6 @@
         <div class="row">
             <div class="col-lg-8 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
-               <!--
-                <hr class="primary">
-                -->
                 <p>Send us a message and we will get back to you as soon as possible!</p>
             </div>
         </div>
@@ -127,6 +134,34 @@
             </div>
         </div>
     </div>
+
+    <!-- Social Media Section -->
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Stay connected with KinKinetics and follow our journey of innovation in emotional and decision-making support systems. Participate in our mission to revolutionize personal support for those in isolation or high-pressure situations.</h2>
+
+                <!-- Social Media Icons Section -->
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/company/kinkinetics" target="_blank">
+                        <img src="/assets/icons/linkedin.png" alt="LinkedIn">
+                    </a>
+                    <a href="https://open.spotify.com/show/2zLDUAQuDBxF8253OKxBZd" target="_blank">
+                        <img src="/assets/icons/spotify.png" alt="Spotify">
+                    </a>
+                    <a href="https://www.youtube.com/@KavyaMuraliParthasarathy" target="_blank">
+                        <img src="/assets/icons/youtube.png" alt="YouTube">
+                    </a>
+                    <a href="https://www.instagram.com/kinkinetics?igsh=aDlkZnNocmkxMjQ1" target="_blank">
+                        <img src="/assets/icons/instagram.png" alt="Instagram">
+                    </a>
+                    <a href="https://x.com/KinKinetics" target="_blank">
+                        <img src="/assets/icons/twitter.png" alt="Twitter">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </aside>
 
     <!-- Botpress Chatbot Scripts -->
     <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
