--- a/content/contact.html
+++ b/content/contact.html
@@ -94,37 +94,41 @@
         /* Styling for the call-to-action text */
         .call-to-action h2 {
             font-size: 1.5em;
-            color: #fff;
+            color: #000; /* Set text color to black */
             margin-bottom: 20px;
+            text-decoration: none; /* Remove underline */
         }
     </style>
 </head>
 <body>
 
-    <!-- Social Media Section -->
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Stay connected with KinKinetics and follow our journey of innovation in emotional and decision-making support systems. Participate in our mission to revolutionize personal support for those in isolation or high-pressure situations.</h2>
+<!-- Social Media Section -->
+<aside class="bg-dark">
+    <div class="container text-center">
+        <div class="call-to-action">
+            <h2>Stay connected with KinKinetics and follow our journey of innovation in emotional and decision-making support systems. Participate in our mission to revolutionize personal support for those in isolation or high-pressure situations.</h2>
 
-                <!-- Social Media Icons Section -->
-                <div class="social-icons">
-                    <a href="https://www.linkedin.com/company/kinkinetics" target="_blank">
-                        <img src="/assets/icons/linkedin.png" alt="LinkedIn">
-                    </a>
-                    <a href="https://www.youtube.com/@KavyaMuraliParthasarathy" target="_blank">
-                        <img src="/assets/icons/youtube.png" alt="YouTube">
-                    </a>
-                    <a href="https://www.instagram.com/kinkinetics?igsh=aDlkZnNocmkxMjQ1" target="_blank">
-                        <img src="/assets/icons/instagram.png" alt="Instagram">
-                    </a>
-                    <a href="https://x.com/KinKinetics" target="_blank">
-                        <img src="/assets/icons/twitter.png" alt="Twitter">
-                    </a>
-                </div>
+            <!-- Social Media Icons Section -->
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/company/kinkinetics" target="_blank">
+                    <img src="/assets/icons/linkedin.png" alt="LinkedIn">
+                </a>
+                <a href="https://open.spotify.com/show/2zLDUAQuDBxF8253OKxBZd" target="_blank">
+                    <img src="/assets/icons/spotify.png" alt="Spotify">
+                </a>
+                <a href="https://www.youtube.com/@KavyaMuraliParthasarathy" target="_blank">
+                    <img src="/assets/icons/youtube.png" alt="YouTube">
+                </a>
+                <a href="https://www.instagram.com/kinkinetics?igsh=aDlkZnNocmkxMjQ1" target="_blank">
+                    <img src="/assets/icons/instagram.png" alt="Instagram">
+                </a>
+                <a href="https://x.com/KinKinetics" target="_blank">
+                    <img src="/assets/icons/twitter.png" alt="Twitter">
+                </a>
             </div>
         </div>
-    </aside>
+    </div>
+</aside>
 
 <section id="contact">
     <div class="container">
@@ -134,7 +138,7 @@
                 <p>Send us a message and we will get back to you as soon as possible!</p>
             </div>
         </div>
-        
+
         <!-- Form Section -->
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
@@ -159,8 +163,6 @@
             </div>
         </div>
     </div>
-
-    
 
     <!-- Botpress Chatbot Scripts -->
     <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
