contacts updated, included links

--- a/content/contact.html
+++ b/content/contact.html
@@ -98,6 +98,13 @@
             margin-bottom: 20px;
             text-decoration: none; /* Remove underline */
         }
+
+        /* New Background color for Social Media Section */
+        .bg-dark {
+            background-color: rgba(46, 64, 83, 0.9); /* Apply rgba background */
+            padding: 40px 0;
+        }
+
     </style>
 </head>
 <body>
@@ -112,6 +119,9 @@
             <div class="social-icons">
                 <a href="https://www.linkedin.com/company/kinkinetics" target="_blank">
                     <img src="/assets/icons/linkedin.png" alt="LinkedIn">
+                </a>
+                <a href="https://open.spotify.com/show/2zLDUAQuDBxF8253OKxBZd" target="_blank">
+                    <img src="/assets/icons/spotify.png" alt="Spotify">
                 </a>
                 <a href="https://www.youtube.com/@KavyaMuraliParthasarathy" target="_blank">
                     <img src="/assets/icons/youtube.png" alt="YouTube">
