contacts updated, included links

--- a/content/contact.html
+++ b/content/contact.html
@@ -82,7 +82,7 @@
         .social-icons {
             display: flex;
             justify-content: center;
-            gap: 15px;
+            gap: 30px;
             margin-top: 15px;
         }
 
@@ -103,6 +103,7 @@
         .bg-dark {
             background-color: rgba(46, 64, 83, 0.9); /* Apply rgba background */
             padding: 40px 0;
+            width: 100%;
         }
 
     </style>
@@ -119,9 +120,6 @@
             <div class="social-icons">
                 <a href="https://www.linkedin.com/company/kinkinetics" target="_blank">
                     <img src="/assets/icons/linkedin.png" alt="LinkedIn">
-                </a>
-                <a href="https://open.spotify.com/show/2zLDUAQuDBxF8253OKxBZd" target="_blank">
-                    <img src="/assets/icons/spotify.png" alt="Spotify">
                 </a>
                 <a href="https://www.youtube.com/@KavyaMuraliParthasarathy" target="_blank">
                     <img src="/assets/icons/youtube.png" alt="YouTube">
