contacts updated, included links

--- a/content/contact.html
+++ b/content/contact.html
@@ -94,7 +94,7 @@
         /* Styling for the call-to-action text */
         .call-to-action h2 {
             font-size: 1.5em;
-            color: #000; /* Set text color to black */
+            color: #BFC9CA; /* Set text color to black */
             margin-bottom: 20px;
             text-decoration: none; /* Remove underline */
         }
