removed buttons in home

--- a/content/home.html
+++ b/content/home.html
@@ -2,8 +2,9 @@
     <h1>Empowering Precision Under Pressure</h1>
     <h2>Revolutionizing Time-Critical Decision-Making</h2>
     <p>From life-saving moments to mission-critical operations, our decision support system ensures accuracy and reliability when time is of the essence.</p>
+   <!--
     <button onclick="window.location.href='#about'">Learn More</button>
     <button onclick="window.location.href='#solutions'">See Our Solutions</button>
-    <button onclick="window.location.href='#contact'">Contact Us</button>
+    <button onclick="window.location.href='#contact'">Contact Us</button> -->
   </section>
   
