removed buttons in home

--- a/content/team.html
+++ b/content/team.html
@@ -1,12 +1,30 @@
 <section id="team" class="team-section">
     <h2>Meet the Team</h2>
 
-    <h3>[Your Name] – Founder & Algorithm Architect</h3>
-    <p>As a visionary with a passion for technology and innovation, I developed the foundation for KinKinetics. With a background in [your relevant experience], my focus is on building solutions that make a difference in critical moments.</p>
+    <!-- Founders Section -->
+    <div class="founders">
+        <div class="member">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="member-img">
+            <h3>Kavya</h3>
+            <p class="designation">CEO & Director</p>
+        </div>
 
+        <div class="member">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="member-img">
+            <h3>Ramdas</h3>
+            <p class="designation">COO & Director</p>
+        </div>
+    </div>
+
+    <!-- Advisors and Mentors Section -->
     <h3>Advisors and Collaborators</h3>
-    <p>[List any mentors, advisors, or partners here, even informally if applicable.]</p>
+    <ul>
+        <li>Dr. Vaishnav – KIMS Hospital</li>
+        <li>Dr. Member4 – ISRO</li>
+        <li>Dr. Member5 – UK Space Agency</li>
+    </ul>
 
+    <!-- Join Us Section -->
     <h3>Join Us</h3>
     <p>We’re always looking for like-minded individuals passionate about redefining decision-making under pressure. Reach out if you’d like to collaborate.</p>
 </section>
