removed buttons in home

--- a/content/team.html
+++ b/content/team.html
@@ -4,25 +4,49 @@
     <!-- Founders Section -->
     <div class="founders">
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="member-img">
-            <h3>Kavya</h3>
-            <p class="designation">CEO & Director</p>
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="member-img founder-img">
+            <div class="member-details">
+                <h3>Kavya</h3>
+                <p class="designation">CEO & Director</p>
+            </div>
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="member-img">
-            <h3>Ramdas</h3>
-            <p class="designation">COO & Director</p>
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="member-img founder-img">
+            <div class="member-details">
+                <h3>Ramdas</h3>
+                <p class="designation">COO & Director</p>
+            </div>
         </div>
     </div>
 
     <!-- Advisors and Mentors Section -->
     <h3>Advisors and Collaborators</h3>
-    <ul>
-        <li>Dr. Vaishnav – KIMS Hospital</li>
-        <li>Dr. Member4 – ISRO</li>
-        <li>Dr. Member5 – UK Space Agency</li>
-    </ul>
+    <div class="advisors">
+        <div class="member">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="member-img advisor-img">
+            <div class="member-details">
+                <h3>Dr. Vaishnav</h3>
+                <p class="designation">KIMS Hospital</p>
+            </div>
+        </div>
+
+        <div class="member">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="member-img advisor-img">
+            <div class="member-details">
+                <h3>Dr. Member4</h3>
+                <p class="designation">ISRO</p>
+            </div>
+        </div>
+
+        <div class="member">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="member-img advisor-img">
+            <div class="member-details">
+                <h3>Dr. Member5</h3>
+                <p class="designation">UK Space Agency</p>
+            </div>
+        </div>
+    </div>
 
     <!-- Join Us Section -->
     <h3>Join Us</h3>
