--- a/content/team.html
+++ b/content/team.html
@@ -1,10 +1,9 @@
 <section id="team" class="team-section">
     <h2>Meet the Team</h2>
 
-    <!-- Founders Section -->
     <div class="founders">
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="member-img founder-img">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="founder-img">
             <div class="member-details">
                 <h3>Kavya</h3>
                 <p class="designation">CEO & Director</p>
@@ -12,7 +11,7 @@
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="member-img founder-img">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="founder-img">
             <div class="member-details">
                 <h3>Ramdas</h3>
                 <p class="designation">COO & Director</p>
@@ -20,11 +19,10 @@
         </div>
     </div>
 
-    <!-- Advisors and Mentors Section -->
     <h3>Advisors and Collaborators</h3>
     <div class="advisors">
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="member-img advisor-img">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="advisor-img">
             <div class="member-details">
                 <h3>Dr. Vaishnav</h3>
                 <p class="designation">KIMS Hospital</p>
@@ -32,7 +30,7 @@
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="member-img advisor-img">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="advisor-img">
             <div class="member-details">
                 <h3>Dr. Member4</h3>
                 <p class="designation">ISRO</p>
@@ -40,7 +38,7 @@
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="member-img advisor-img">
+            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="advisor-img">
             <div class="member-details">
                 <h3>Dr. Member5</h3>
                 <p class="designation">UK Space Agency</p>
@@ -48,7 +46,6 @@
         </div>
     </div>
 
-    <!-- Join Us Section -->
     <h3>Join Us</h3>
     <p>We’re always looking for like-minded individuals passionate about redefining decision-making under pressure. Reach out if you’d like to collaborate.</p>
 </section>
