--- a/content/team.html
+++ b/content/team.html
@@ -3,7 +3,7 @@
 
     <div class="founders">
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="founder-img">
+            <img src="/assets/images/Square.png" alt="Kavya" class="founder-img">
             <div class="member-details">
                 <h3>Kavya</h3>
                 <p class="designation">CEO & Director</p>
@@ -11,7 +11,7 @@
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="founder-img">
+            <img src="/assets/images/Square.png" alt="Ramdas" class="founder-img">
             <div class="member-details">
                 <h3>Ramdas</h3>
                 <p class="designation">COO & Director</p>
@@ -22,7 +22,7 @@
     <h3>Advisors and Collaborators</h3>
     <div class="advisors">
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="advisor-img">
+            <img src="/assets/images/Square.png" alt="Dr. Vaishnav" class="advisor-img">
             <div class="member-details">
                 <h3>Dr. Vaishnav</h3>
                 <p class="designation">KIMS Hospital</p>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="advisor-img">
+            <img src="/assets/images/Square.png" alt="Dr. Member4" class="advisor-img">
             <div class="member-details">
                 <h3>Dr. Member4</h3>
                 <p class="designation">ISRO</p>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="member">
-            <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="advisor-img">
+            <img src="/assets/images/Square.png" alt="Dr. Member5" class="advisor-img">
             <div class="member-details">
                 <h3>Dr. Member5</h3>
                 <p class="designation">UK Space Agency</p>
