--- a/content/team.html
+++ b/content/team.html
@@ -1,51 +1,52 @@
 <section id="team" class="team-section">
     <h2>Meet the Team</h2>
+    <hr class="primary">
 
-    <div class="founders">
-        <div class="member">
-            <img src="/assets/images/Square.png" alt="Kavya" class="founder-img">
-            <div class="member-details">
+    <!-- Founders Section -->
+    <div class="container">
+        <div class="row">
+            <!-- Member 1: Kavya -->
+            <div class="col-md-4 text-center">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                 <h3>Kavya</h3>
-                <p class="designation">CEO & Director</p>
+                <p>CEO & Director</p>
             </div>
-        </div>
 
-        <div class="member">
-            <img src="/assets/images/Square.png" alt="Ramdas" class="founder-img">
-            <div class="member-details">
+            <!-- Member 2: Ramdas -->
+            <div class="col-md-4 text-center">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                 <h3>Ramdas</h3>
-                <p class="designation">COO & Director</p>
+                <p>COO & Director</p>
             </div>
         </div>
     </div>
 
+    <hr class="primary">
+
+    <!-- Advisors and Mentors Section -->
     <h3>Advisors and Collaborators</h3>
-    <div class="advisors">
-        <div class="member">
-            <img src="/assets/images/Square.png" alt="Dr. Vaishnav" class="advisor-img">
-            <div class="member-details">
-                <h3>Dr. Vaishnav</h3>
-                <p class="designation">KIMS Hospital</p>
+    <div class="container">
+        <div class="row">
+            <!-- Advisor 1: Dr. Vaishnav -->
+            <div class="col-md-4 text-center">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                <h4>Dr. Vaishnav</h4>
+                <p>KIMS Hospital</p>
             </div>
-        </div>
 
-        <div class="member">
-            <img src="/assets/images/Square.png" alt="Dr. Member4" class="advisor-img">
-            <div class="member-details">
-                <h3>Dr. Member4</h3>
-                <p class="designation">ISRO</p>
+            <!-- Advisor 2: Dr. Member4 -->
+            <div class="col-md-4 text-center">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                <h4>Dr. Member4</h4>
+                <p>ISRO</p>
             </div>
-        </div>
 
-        <div class="member">
-            <img src="/assets/images/Square.png" alt="Dr. Member5" class="advisor-img">
-            <div class="member-details">
-                <h3>Dr. Member5</h3>
-                <p class="designation">UK Space Agency</p>
+            <!-- Advisor 3: Dr. Member5 -->
+            <div class="col-md-4 text-center">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                <h4>Dr. Member5</h4>
+                <p>UK Space Agency</p>
             </div>
         </div>
     </div>
-
-    <h3>Join Us</h3>
-    <p>We’re always looking for like-minded individuals passionate about redefining decision-making under pressure. Reach out if you’d like to collaborate.</p>
 </section>
