--- a/content/team.html
+++ b/content/team.html
@@ -1,48 +1,42 @@
 <section id="team" class="team-section">
     <h2>Meet the Team</h2>
-    <hr class="primary">
 
     <!-- Founders Section -->
     <div class="container">
-        <div class="row">
-            <!-- Member 1: Kavya -->
-            <div class="col-md-4 text-center">
+        <div class="row text-center">
+            <!-- Kavya -->
+            <div class="col-lg-3">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                 <h3>Kavya</h3>
                 <p>CEO & Director</p>
             </div>
 
-            <!-- Member 2: Ramdas -->
-            <div class="col-md-4 text-center">
+            <!-- Ramdas -->
+            <div class="col-lg-3">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                 <h3>Ramdas</h3>
                 <p>COO & Director</p>
             </div>
         </div>
-    </div>
 
-    <hr class="primary">
-
-    <!-- Advisors and Mentors Section -->
-    <h3>Advisors and Collaborators</h3>
-    <div class="container">
-        <div class="row">
-            <!-- Advisor 1: Dr. Vaishnav -->
-            <div class="col-md-4 text-center">
+        <!-- Advisors Section -->
+        <div class="row text-center mt-5">
+            <!-- Dr. Vaishnav -->
+            <div class="col-lg-2">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Vaishnav</h4>
                 <p>KIMS Hospital</p>
             </div>
 
-            <!-- Advisor 2: Dr. Member4 -->
-            <div class="col-md-4 text-center">
+            <!-- Dr. Member4 -->
+            <div class="col-lg-2">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Member4</h4>
                 <p>ISRO</p>
             </div>
 
-            <!-- Advisor 3: Dr. Member5 -->
-            <div class="col-md-4 text-center">
+            <!-- Dr. Member5 -->
+            <div class="col-lg-2">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Member5</h4>
                 <p>UK Space Agency</p>
@@ -50,3 +44,31 @@
         </div>
     </div>
 </section>
+
+<style>
+    /* Add some margin for spacing */
+    .team-section {
+        padding: 50px 0;
+        background-color: #f8f8f8;
+    }
+
+    /* Ensure images are circular */
+    .img-fluid {
+        border-radius: 50%;
+    }
+
+    /* Centering text in the columns */
+    .text-center h3, .text-center h4, .text-center p {
+        text-align: center;
+    }
+
+    /* Margin adjustments for headings */
+    h3, h4 {
+        margin-top: 10px;
+    }
+
+    p {
+        margin-top: 5px;
+        font-size: 1rem;
+    }
+</style>
